--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+!DOCTYPE HTML
+<html>
+<title>ALUMNET</title>
+<body>
+  <h1>This is the first page of ALUMNET</h1>
+  </body>
+  <style>
+  body{
+    background-color:green;
+    color:#fff;
+    text-align:center; 
+  }
+  
+  </style>
+  
+</html>
