--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 <title>ALUMNET</title>
 <body>
   <h1>This is the first page of ALUMNET</h1>
+  
+  
+<script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyD3lJABhSOrZEBWfbzbtL8ZOBsFkWGNgfs",
+    authDomain: "alumnetkz-b781e.firebaseapp.com",
+    databaseURL: "https://alumnetkz-b781e.firebaseio.com",
+    projectId: "alumnetkz-b781e",
+    storageBucket: "alumnetkz-b781e.appspot.com",
+    messagingSenderId: "502865581353"
+  };
+  firebase.initializeApp(config);
+</script>
+  
   </body>
   <style>
   body{
